[gd_scene load_steps=6 format=2]

[ext_resource path="res://Scenes/TileMap.tscn" type="PackedScene" id=1]
[ext_resource path="res://Scenes/Player.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scripts/TestWorld.gd" type="Script" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 3, 72 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 128, 4 )

[node name="TestWorld" type="Node2D"]
script = ExtResource( 3 )

[node name="TileMap" parent="." instance=ExtResource( 1 )]
tile_data = PoolIntArray( -65536, 1, 0, -65535, 1, 0, -65534, 1, 0, -65533, 1, 0, -65532, 1, 0, -65531, 1, 0, -65530, 1, 0, -65529, 1, 0, -65528, 1, 0, -65527, 1, 0, -65526, 1, 0, -65525, 1, 0, -65524, 1, 0, -65523, 1, 0, -65522, 1, 0, -65521, 1, 0, -65520, 1, 0, -65519, 1, 0, -65518, 1, 0, -65517, 1, 0, -65516, 1, 0, -65515, 1, 0, -65514, 1, 0, -65513, 1, 0, -65512, 1, 0, -65511, 1, 0, -65510, 1, 0, -65509, 1, 0, -65508, 1, 0, -65507, 1, 0, -65506, 1, 0, -65503, 1, 0, -65502, 1, 0, -65501, 1, 0, -65500, 1, 0, -65499, 1, 0, -65498, 1, 0, -65497, 1, 0, -65496, 1, 0, -65495, 1, 0, -65494, 1, 0, -65493, 1, 0, -65492, 1, 0, -65491, 1, 0, -65490, 1, 0, -65489, 1, 0, -65488, 1, 0, -65487, 1, 0, -65486, 1, 0, -65485, 1, 0, -65484, 1, 0, -65483, 1, 0, -65482, 1, 0, -65481, 1, 0, -65480, 1, 0, -65479, 1, 0, -65478, 1, 0, -65477, 1, 0, -65476, 1, 0, -65475, 1, 0, -65474, 1, 0, -65473, 1, 0, 65535, 1, 0, 2, 2, 0, 3, 2, 0, 4, 2, 0, 21, 2, 0, 22, 2, 0, 64, 1, 0, 131071, 1, 0, 65538, 2, 0, 65556, 2, 0, 65557, 2, 0, 65583, 4, 0, 65596, 2, 0, 65597, 2, 0, 65600, 1, 0, 196607, 1, 0, 131073, 2, 0, 131091, 2, 0, 131092, 2, 0, 131108, 2, 0, 131109, 2, 0, 131110, 2, 0, 131111, 2, 0, 131129, 2, 0, 131130, 2, 0, 131131, 2, 0, 131132, 2, 0, 131136, 1, 0, 262143, 1, 0, 196619, 2, 0, 196620, 2, 0, 196621, 3, 0, 196632, 2, 0, 196637, 2, 0, 196638, 2, 0, 196644, 2, 0, 196645, 2, 0, 196646, 2, 0, 196647, 2, 0, 196648, 2, 0, 196664, 2, 0, 196665, 2, 0, 196672, 1, 0, 327679, 1, 0, 262153, 2, 0, 262154, 2, 0, 262155, 2, 0, 262166, 3, 0, 262167, 2, 0, 262174, 2, 0, 262180, 2, 0, 262181, 2, 0, 262183, 2, 0, 262184, 2, 0, 262185, 2, 0, 262186, 2, 0, 262187, 2, 0, 262199, 2, 0, 262200, 2, 0, 262206, 4, 0, 262208, 1, 0, 393215, 1, 0, 327688, 2, 0, 327689, 2, 0, 327702, 2, 0, 327703, 2, 0, 327717, 2, 0, 327718, 2, 0, 327719, 2, 0, 327720, 2, 0, 327723, 2, 0, 327724, 2, 0, 327735, 2, 0, 327744, 1, 0, 458751, 1, 0, 393237, 2, 0, 393238, 2, 0, 393246, 2, 0, 393255, 1, 0, 393256, 1, 0, 393261, 2, 0, 393262, 2, 0, 393263, 2, 0, 393264, 2, 0, 393265, 2, 0, 393266, 2, 0, 393267, 2, 0, 393268, 2, 0, 393280, 1, 0, 524287, 1, 0, 458752, 2, 0, 458765, 2, 0, 458771, 2, 0, 458772, 2, 0, 458782, 2, 0, 458789, 1, 0, 458790, 1, 0, 458791, 1, 0, 458793, 1, 0, 458804, 2, 0, 458805, 2, 0, 458806, 2, 0, 458807, 2, 0, 458808, 3, 0, 458816, 1, 0, 589823, 1, 0, 524288, 2, 0, 524289, 2, 0, 524300, 2, 0, 524301, 2, 0, 524305, 2, 0, 524306, 2, 0, 524307, 3, 0, 524312, 1, 0, 524313, 1, 0, 524317, 2, 0, 524318, 2, 0, 524322, 3, 0, 524323, 3, 0, 524325, 1, 0, 524327, 1, 0, 524330, 1, 0, 524338, 2, 0, 524339, 2, 0, 524340, 2, 0, 524342, 3, 0, 524343, 3, 0, 524352, 1, 0, 655359, 1, 0, 589825, 2, 0, 589836, 2, 0, 589840, 2, 0, 589841, 2, 0, 589848, 1, 0, 589849, 1, 0, 589853, 2, 0, 589854, 2, 0, 589858, 3, 0, 589859, 3, 0, 589861, 1, 0, 589862, 1, 0, 589874, 2, 0, 589888, 1, 0, 720895, 1, 0, 655361, 2, 0, 655362, 2, 0, 655372, 2, 0, 655375, 2, 0, 655376, 2, 0, 655381, 1, 0, 655382, 1, 0, 655383, 1, 0, 655384, 1, 0, 655387, 2, 0, 655388, 2, 0, 655390, 2, 0, 655401, 2, 0, 655402, 2, 0, 655407, 2, 0, 655410, 2, 0, 655424, 1, 0, 786431, 1, 0, 720898, 2, 0, 720904, 4, 0, 720908, 2, 0, 720916, 1, 0, 720919, 1, 0, 720923, 2, 0, 720929, 2, 0, 720935, 2, 0, 720936, 2, 0, 720937, 2, 0, 720960, 1, 0, 851967, 1, 0, 786443, 2, 0, 786444, 2, 0, 786449, 1, 0, 786450, 1, 0, 786451, 1, 0, 786452, 1, 0, 786454, 1, 0, 786455, 1, 0, 786458, 2, 0, 786465, 2, 0, 786469, 2, 0, 786470, 2, 0, 786471, 2, 0, 786480, 4, 0, 786496, 1, 0, 917503, 1, 0, 851979, 2, 0, 851986, 1, 0, 851987, 1, 0, 851990, 1, 0, 851993, 2, 0, 852001, 2, 0, 852004, 2, 0, 852005, 2, 0, 852021, 2, 0, 852022, 2, 0, 852026, 2, 0, 852027, 2, 0, 852028, 2, 0, 852029, 2, 0, 852032, 1, 0, 983039, 1, 0, 917515, 2, 0, 917527, 2, 0, 917528, 2, 0, 917537, 2, 0, 917539, 2, 0, 917540, 2, 0, 917556, 2, 0, 917557, 2, 0, 917560, 2, 0, 917561, 2, 0, 917562, 2, 0, 917568, 1, 0, 1048575, 1, 0, 983050, 2, 0, 983051, 2, 0, 983063, 2, 0, 983066, 4, 0, 983069, 1, 0, 983070, 1, 0, 983073, 1, 0, 983074, 1, 0, 983082, 2, 0, 983091, 2, 0, 983092, 2, 0, 983104, 1, 0, 1114111, 1, 0, 1048640, 1, 0, 1310719, 1, 0, 1245187, 2, 0, 1245188, 2, 0, 1245189, 2, 0, 1245190, 2, 0, 1245246, 2, 0, 1245248, 1, 0, 1376255, 1, 0, 1310723, 2, 0, 1310726, 2, 0, 1310739, 2, 0, 1310740, 2, 0, 1310749, 1, 0, 1310750, 1, 0, 1310753, 1, 0, 1310754, 1, 0, 1310764, 3, 0, 1310765, 3, 0, 1310775, 2, 0, 1310780, 2, 0, 1310781, 2, 0, 1310782, 2, 0, 1310783, 1, 0, 1310784, 1, 0, 1441791, 1, 0, 1376259, 2, 0, 1376260, 2, 0, 1376272, 2, 0, 1376273, 2, 0, 1376274, 2, 0, 1376293, 1, 0, 1376298, 3, 0, 1376299, 3, 0, 1376300, 3, 0, 1376310, 2, 0, 1376311, 2, 0, 1376312, 2, 0, 1376315, 1, 0, 1376316, 2, 0, 1376317, 1, 0, 1376318, 2, 0, 1376319, 2, 0, 1376320, 1, 0, 1507327, 1, 0, 1441797, 2, 0, 1441805, 2, 0, 1441807, 2, 0, 1441808, 2, 0, 1441809, 2, 0, 1441810, 2, 0, 1441811, 2, 0, 1441812, 2, 0, 1441813, 2, 0, 1441825, 2, 0, 1441827, 1, 0, 1441828, 1, 0, 1441832, 3, 0, 1441833, 3, 0, 1441846, 2, 0, 1441849, 2, 0, 1441850, 1, 0, 1441851, 1, 0, 1441852, 2, 0, 1441853, 2, 0, 1441854, 2, 0, 1441855, 2, 0, 1441856, 1, 0, 1572863, 1, 0, 1507332, 2, 0, 1507333, 2, 0, 1507340, 2, 0, 1507341, 2, 0, 1507342, 2, 0, 1507343, 2, 0, 1507344, 2, 0, 1507349, 2, 0, 1507350, 2, 0, 1507351, 2, 0, 1507352, 2, 0, 1507353, 2, 0, 1507354, 2, 0, 1507361, 2, 0, 1507364, 1, 0, 1507367, 3, 0, 1507380, 2, 0, 1507381, 2, 0, 1507385, 2, 0, 1507386, 1, 0, 1507387, 2, 0, 1507388, 1, 0, 1507389, 2, 0, 1507390, 2, 0, 1507391, 1, 0, 1507392, 1, 0, 1638399, 1, 0, 1572867, 2, 0, 1572868, 2, 0, 1572873, 2, 0, 1572874, 2, 0, 1572875, 2, 0, 1572878, 2, 0, 1572879, 2, 0, 1572880, 2, 0, 1572894, 2, 0, 1572897, 2, 0, 1572900, 1, 0, 1572903, 3, 0, 1572915, 2, 0, 1572916, 2, 0, 1572922, 2, 0, 1572923, 2, 0, 1572924, 2, 0, 1572925, 2, 0, 1572926, 1, 0, 1572927, 1, 0, 1572928, 1, 0, 1703935, 1, 0, 1638403, 2, 0, 1638406, 2, 0, 1638407, 2, 0, 1638408, 2, 0, 1638409, 2, 0, 1638410, 2, 0, 1638414, 2, 0, 1638416, 2, 0, 1638424, 1, 0, 1638425, 1, 0, 1638426, 1, 0, 1638430, 2, 0, 1638434, 2, 0, 1638439, 3, 0, 1638451, 2, 0, 1638458, 2, 0, 1638459, 2, 0, 1638460, 2, 0, 1638461, 2, 0, 1638462, 1, 0, 1638463, 1, 0, 1638464, 1, 0, 1769471, 1, 0, 1703938, 2, 0, 1703942, 2, 0, 1703944, 2, 0, 1703945, 2, 0, 1703948, 2, 0, 1703949, 2, 0, 1703952, 2, 0, 1703958, 1, 0, 1703959, 1, 0, 1703970, 2, 0, 1703995, 2, 0, 1703996, 2, 0, 1703997, 1, 0, 1703998, 1, 0, 1703999, 1, 0, 1704000, 1, 0, 1835007, 1, 0, 1769474, 2, 0, 1769478, 2, 0, 1769480, 2, 0, 1769483, 2, 0, 1769484, 2, 0, 1769489, 2, 0, 1769493, 2, 0, 1769494, 2, 0, 1769495, 2, 0, 1769496, 2, 0, 1769497, 2, 0, 1769498, 2, 0, 1769499, 2, 0, 1769500, 2, 0, 1769506, 2, 0, 1769531, 2, 0, 1769532, 2, 0, 1769533, 1, 0, 1769534, 1, 0, 1769535, 1, 0, 1769536, 1, 0, 1900543, 1, 0, 1835010, 2, 0, 1835014, 2, 0, 1835015, 2, 0, 1835023, 2, 0, 1835024, 2, 0, 1835025, 2, 0, 1835026, 2, 0, 1835027, 2, 0, 1835028, 2, 0, 1835033, 2, 0, 1835034, 2, 0, 1835035, 2, 0, 1835036, 2, 0, 1835037, 2, 0, 1835038, 2, 0, 1835041, 2, 0, 1835042, 2, 0, 1835051, 2, 0, 1835052, 2, 0, 1835067, 2, 0, 1835068, 1, 0, 1835069, 1, 0, 1835070, 1, 0, 1835071, 1, 0, 1835072, 1, 0, 1966079, 1, 0, 1900546, 2, 0, 1900547, 2, 0, 1900551, 2, 0, 1900557, 2, 0, 1900558, 2, 0, 1900564, 2, 0, 1900571, 2, 0, 1900572, 2, 0, 1900573, 2, 0, 1900574, 2, 0, 1900577, 2, 0, 1900578, 2, 0, 1900584, 2, 0, 1900585, 2, 0, 1900586, 2, 0, 1900598, 2, 0, 1900599, 2, 0, 1900600, 2, 0, 1900601, 2, 0, 1900602, 2, 0, 1900604, 1, 0, 1900605, 1, 0, 1900606, 1, 0, 1900607, 1, 0, 1900608, 1, 0, 2031615, 1, 0, 1966083, 2, 0, 1966087, 2, 0, 1966100, 2, 0, 1966106, 2, 0, 1966107, 2, 0, 1966108, 2, 0, 1966118, 2, 0, 1966119, 2, 0, 1966120, 2, 0, 1966131, 2, 0, 1966132, 2, 0, 1966133, 2, 0, 1966140, 1, 0, 1966141, 1, 0, 1966142, 1, 0, 1966143, 1, 0, 1966144, 1, 0, 2097151, 1, 0, 2031619, 2, 0, 2031620, 2, 0, 2031623, 2, 0, 2031624, 2, 0, 2031636, 2, 0, 2031637, 2, 0, 2031641, 2, 0, 2031644, 2, 0, 2031645, 2, 0, 2031646, 2, 0, 2031652, 2, 0, 2031653, 2, 0, 2031676, 1, 0, 2031677, 1, 0, 2031678, 1, 0, 2031679, 1, 0, 2031680, 1, 0, 2162687, 1, 0, 2097156, 2, 0, 2097157, 2, 0, 2097160, 2, 0, 2097173, 2, 0, 2097174, 2, 0, 2097175, 2, 0, 2097176, 2, 0, 2097187, 2, 0, 2097188, 2, 0, 2097212, 1, 0, 2097213, 1, 0, 2097214, 1, 0, 2097215, 1, 0, 2097216, 1, 0, 2228223, 1, 0, 2162693, 2, 0, 2162694, 2, 0, 2162695, 2, 0, 2162696, 2, 0, 2162697, 2, 0, 2162698, 2, 0, 2162699, 2, 0, 2162700, 2, 0, 2162707, 2, 0, 2162708, 2, 0, 2162710, 2, 0, 2162723, 2, 0, 2162731, 3, 0, 2162748, 1, 0, 2162749, 1, 0, 2162750, 1, 0, 2162751, 1, 0, 2162752, 1, 0, 2293759, 1, 0, 2228237, 2, 0, 2228238, 2, 0, 2228239, 2, 0, 2228240, 2, 0, 2228241, 2, 0, 2228242, 2, 0, 2228259, 2, 0, 2228268, 3, 0, 2228269, 3, 0, 2228286, 1, 0, 2228287, 1, 0, 2228288, 1, 0, 2359295, 1, 0, 2293795, 2, 0, 2293806, 3, 0, 2293807, 3, 0, 2293808, 3, 0, 2293809, 3, 0, 2293823, 1, 0, 2293824, 1, 0, 2359296, 1, 0, 2359297, 1, 0, 2359298, 1, 0, 2359299, 1, 0, 2359300, 1, 0, 2359301, 1, 0, 2359302, 1, 0, 2359303, 1, 0, 2359304, 1, 0, 2359305, 1, 0, 2359306, 1, 0, 2359307, 1, 0, 2359308, 1, 0, 2359309, 1, 0, 2359310, 1, 0, 2359311, 1, 0, 2359312, 1, 0, 2359313, 1, 0, 2359314, 1, 0, 2359315, 1, 0, 2359316, 1, 0, 2359317, 1, 0, 2359318, 1, 0, 2359319, 1, 0, 2359320, 1, 0, 2359321, 1, 0, 2359322, 1, 0, 2359323, 1, 0, 2359324, 1, 0, 2359325, 1, 0, 2359326, 1, 0, 2359329, 1, 0, 2359330, 1, 0, 2359331, 1, 0, 2359332, 1, 0, 2359333, 1, 0, 2359334, 1, 0, 2359335, 1, 0, 2359336, 1, 0, 2359337, 1, 0, 2359338, 1, 0, 2359339, 1, 0, 2359340, 1, 0, 2359341, 1, 0, 2359342, 1, 0, 2359343, 1, 0, 2359344, 1, 0, 2359345, 1, 0, 2359346, 1, 0, 2359347, 1, 0, 2359348, 1, 0, 2359349, 1, 0, 2359350, 1, 0, 2359351, 1, 0, 2359352, 1, 0, 2359353, 1, 0, 2359354, 1, 0, 2359355, 1, 0, 2359356, 1, 0, 2359357, 1, 0, 2359358, 1, 0, 2359359, 1, 0 )

[node name="Player" parent="." instance=ExtResource( 2 )]
position = Vector2( 28, 44 )

[node name="Bg" type="CanvasLayer" parent="."]
layer = -128

[node name="ColorRect" type="ColorRect" parent="Bg"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 257.0
margin_bottom = 143.0
color = Color( 0, 0, 0, 1 )

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( 128, 71 )

[node name="Camera2D2" type="Camera2D" parent="."]
position = Vector2( 384, 71 )

[node name="Camera2D3" type="Camera2D" parent="."]
position = Vector2( 128, 215 )

[node name="Camera2D4" type="Camera2D" parent="."]
position = Vector2( 384, 215 )

[node name="Camera2D5" type="Camera2D" parent="."]
position = Vector2( 256, 143 )
zoom = Vector2( 2, 2 )

[node name="ChangeCameraZone" type="Area2D" parent="."]
position = Vector2( 256, 71 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="ChangeCameraZone"]
position = Vector2( -3, 0 )
shape = SubResource( 1 )

[node name="ChangeCameraZone2" type="Area2D" parent="."]
position = Vector2( 262, 71 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="ChangeCameraZone2"]
position = Vector2( -3, 0 )
shape = SubResource( 1 )

[node name="ChangeCameraZone3" type="Area2D" parent="."]
position = Vector2( 256, 215 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="ChangeCameraZone3"]
position = Vector2( -3, 0 )
shape = SubResource( 1 )

[node name="ChangeCameraZone4" type="Area2D" parent="."]
position = Vector2( 262, 215 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="ChangeCameraZone4"]
position = Vector2( -3, 0 )
shape = SubResource( 1 )

[node name="ChangeCameraZone5" type="Area2D" parent="."]
position = Vector2( 10, 133 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="ChangeCameraZone5"]
position = Vector2( 118, 6 )
shape = SubResource( 2 )

[node name="ChangeCameraZone6" type="Area2D" parent="."]
position = Vector2( 10, 134 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="ChangeCameraZone6"]
position = Vector2( 118, 13 )
shape = SubResource( 2 )

[node name="ChangeCameraZone7" type="Area2D" parent="."]
position = Vector2( 266, 134 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="ChangeCameraZone7"]
position = Vector2( 118, 5 )
shape = SubResource( 2 )

[node name="ChangeCameraZone8" type="Area2D" parent="."]
position = Vector2( 266, 134 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="ChangeCameraZone8"]
position = Vector2( 118, 13 )
shape = SubResource( 2 )

[connection signal="body_entered" from="ChangeCameraZone" to="." method="_on_Area2D_body_entered"]
[connection signal="body_entered" from="ChangeCameraZone2" to="." method="_on_ChangeCameraZone2_body_entered"]
[connection signal="body_entered" from="ChangeCameraZone3" to="." method="_on_ChangeCameraZone3_body_entered"]
[connection signal="body_entered" from="ChangeCameraZone4" to="." method="_on_ChangeCameraZone4_body_entered"]
[connection signal="body_entered" from="ChangeCameraZone5" to="." method="_on_ChangeCameraZone5_body_entered"]
[connection signal="body_entered" from="ChangeCameraZone6" to="." method="_on_ChangeCameraZone6_body_entered"]
[connection signal="body_entered" from="ChangeCameraZone7" to="." method="_on_ChangeCameraZone7_body_entered"]
[connection signal="body_entered" from="ChangeCameraZone8" to="." method="_on_ChangeCameraZone8_body_entered"]
